--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,17 @@ nav{
     background-color: #ffffff69;
     box-shadow:0 2px 5px rgba(0, 0, 0, 0.1);
 }
+nav ul li {
+    padding: 1rem;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #333;
+    font-weight:500px;
+}
+.container{
+    max-width: 1200px;
+    margin:2rem auto;
+    padding: 0 1rem;
+}
+
