--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,27 @@ nav ul li a{
     margin:2rem auto;
     padding: 0 1rem;
 }
+.hero{
+    background: url('https://images.unsplash.com/photo-1501443762994-82bd5dace89a')center/cover;
+height: 400px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+text-align: center;
+position: relative;
+margin-bottom:2rem ; 
+}
+.hero::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
 
+}
+.hero-content{
+    position: ;
+}
