--- a/styles.css
+++ b/styles.css
@@ -60,5 +60,18 @@ margin-bottom:2rem ;
 
 }
 .hero-content{
-    position: ;
+    position: relative;
+    z-index: 1;
+}
+.btn{
+     display: inline-block;  
+      background-color: #6e45e2;
+      color: white;
+      padding:0.7rem 1.5rem;
+      border:none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 1rem;                               
 }
